--- a/package.json
+++ b/package.json
@@ -36,6 +36,14 @@
     "@grpc/grpc-js": "^1.2.0"
   },
   "devDependencies": {
-    "@grpc/grpc-js": "^1.2.11"
+    "@grpc/grpc-js": "^1.2.11",
+    "@types/jest": "^26.0.21",
+    "jest": "^26.6.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
