--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        node-version: ["12", "14", "15"]
+        node-version: ["10", "12", "13", "14", "15"]
     
     runs-on: ${{ matrix.os }}
 
@@ -26,4 +26,3 @@ jobs:
         run: npm ci
       - name: test
         run: npm t
-        
