--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@grpc/grpc-js": "^1.2.11",
     "@types/jest": "^26.0.21",
+    "coveralls": "^3.1.0",
     "jest": "^26.6.3"
   },
   "jest": {
