--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,6 +63,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "14"
+          registry-url: "https://registry.npmjs.org"
       - name: install dependencies
         run: npm ci
       - name: publish
